<resources>
    <string name="app_name">Kalkulator PLTS</string>
    <string name="title_hasil_ac_simple">Hasil perhitungan AC</string>
    <string name="subtitle_hasil_ac_simple">Hasil data yang diperlukan</string>
    <string name="rencana_beban_harian">Rencana Beban Harian</string>
    <string name="konsumsi_energi_harian">Konsumsi Energi Harian</string>
    <string name="kapasitas_baterai">Kapasitas Baterai</string>
    <string name="kapasitas_pv_no_inverter">Kapasitas PV w/o Inverter</string>
    <string name="kapasitas_inverter">Kapasitas Inverter</string>

    <string name="illustration">illustration</string>
    <string name="kalkulator_plts">Kalkulator PLTS</string>
    <string name="start_subtitle">Hitung seberapa banyak daya yang anda butuhkan untuk menentukan ukuran dan biaya susunan panel surya di rumah anda.</string>
    <string name="mode_simple">Mode Simpel</string>
    <string name="mode_advanced">Mode Lanjut</string>

    <string name="kapasitas_pv_inverter">Kapasitas PV Inverter</string>
    <string name="title_hasil_dc_simple">Hasil perhitungan DC</string>
    <string name="input_beban">Input Beban</string>
    <string name="input_beban_kebutuhan_listrik">Input beban kebutuhan listrik</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="tambah_beban">Tambah Beban</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="title_hasil_perhitungan_adv">Hasil Perhitungan</string>

    <string name="pilih_ac_cd">Pilih AC/CD</string>
    <string name="input_data">Input Data</string>
    <string name="input_data_tambahan">Input data tambahan</string>
    <string name="logo_aplikasi">logo_aplikasi</string>
  
    <string-array name="sumber">
        <item>Baterai</item>
        <item>Panel Surya</item>
    </string-array>
    <string-array name="data_tegangan_baterai">
        <item>Data 1</item>
        <item>Data 2</item>
    </string-array>
    <string-array name="data_tegangan_baterai_unit">
        <item>Data 1</item>
        <item>Data 2</item>
    </string-array>
    <string-array name="data_rasio_performa">
        <item>Data 1</item>
        <item>Data 2</item>
    </string-array>
    <string-array name="data_rasio_acdc">
        <item>Data 1</item>
        <item>Data 2</item>
    </string-array>
    <string-array name="data_acdc">
        <item>AC</item>
        <item>DC</item>
    </string-array>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="jenis_beban">Jenis Beban</string>
    <string name="sumber_beban">Sumber</string>
    <string name="daya_watt">Daya(Watt)</string>
    <string name="durasi_jam">Durasi(jam)</string>
    <string name="total_energi_bulanan">Total energi bulanan (kWh)</string>
</resources>