<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.splash.GetStarted"
    android:orientation="vertical">

<!--    Image-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_get_started"
        android:contentDescription="@string/illustration" />

<!--    Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/kalkulator_plts"
        style="@style/textStartTitle"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="36dp"
        android:text="@string/start_subtitle"
        style="@style/textStartSubtitle"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="36dp"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn_mode_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttonTitle"
            android:layout_weight="1"
            android:text="@string/mode_simple"/>
        <Button
            android:id="@+id/btn_mode_advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttonTitle"
            android:layout_weight="1"
            android:layout_marginStart="22dp"
            android:text="@string/mode_advanced"/>

    </LinearLayout>

</LinearLayout>