<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".app.ui.advance.InputBebanAdvance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                style="@style/textTitleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_beban"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.102"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.409" />

            <TextView
                android:id="@+id/textView4"
                style="@style/textSubtitleWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="68dp"
                android:text="@string/input_beban_kebutuhan_listrik"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/dropdownFormStyle">

                <AutoCompleteTextView
                    android:id="@+id/et_pilih_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/pilih_lokasi"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:backgroundTint="@null"
                android:background="@drawable/bg_box_outline"
                android:drawableStart="@drawable/ic_add_button"
                android:text="@string/tambah_beban"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:gravity="fill_vertical"
                android:fontFamily="@font/montserrat_bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_beban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="match_parent">

       <Button
           android:id="@+id/btn_next"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_alignParentBottom="true"
           android:layout_gravity="center"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="43dp"
           android:textSize="16sp"
           android:gravity="center"
           android:text="@string/selanjutnya"
           android:textAllCaps="false" />


   </RelativeLayout>


</LinearLayout>